--- a/public/saved.html
+++ b/public/saved.html
@@ -14,11 +14,13 @@
             background-color: rgb(179, 165, 156);
         }
         .brickLeft {
-            background-image: url("../images/brick-left.jpg")
+            background-image: url("../images/brick-left.jpg");
+            width: 100%;
         }
 
         .brickRight {
-            background-image: url("../images/brick-right.jpeg")
+            background-image: url("../images/brick-right.jpeg");
+            width: 100%;
         }
         .yourPike {
             font-family: 'Lobster', cursive;
@@ -172,11 +174,11 @@
 
     <div class="row saved-page">
         <div class="col-md-1 brickLeft"></div>
-        <div class="col-md-6 saved-articles justify-contents-center">
+        <div class="col-md-8 saved-articles justify-contents-center">
             <div class="row saved-header justify-contents-center text-center">Your Saved Articles</div>
             <div class="row justify-contents-center saved-articles-box"></div>
         </div>
-        <div class="col-md-3 notes-box">
+        <div class="col-md-2 notes-box">
             <div id = "notes">
                 <p id="yourNotes">Your Notes ...</p>
             </div>
